# Loup-Garou-Exia

./: CMakeLists.txt  LICENSE  README.md
src/begin/: Application.cpp  Application.h  main.cpp
src/inOut/: Narrator.cpp  Narrator.h
src/player/: Player.cpp  Player.h
src/rolesDistribution/: AutoCompositionPercent.h  Distribution.cpp  Distribution.h  Role.cpp  Role.h  RolesDefinition.h  RolesDistrib.cpp  RolesDistrib.h  Villager.cpp  Villager.h  Werewolf.cpp  Werewolf.h
src/time/: Day.cpp  Day.h  Time.cpp  Time.h
